--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "barcode-scan-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +13,13 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "mssql": "^9.0.1",
+    "sequelize": "^6.21.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
